# rush01_2023

./: .gitignore  CMakeLists.txt  count_box.c  count_rr_rl.c  inv_tab.c  lib.c  lib.h  lib2.c  main.c  test.c
ex00/: count_rr_rl.c  include_sys.h  lib.c  lib.h  lib2.c  lib2.h  lib_aux.c  lib_aux.h  main.c  test.c
